--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,10 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 h1,
 h2,
 h2,
@@ -27,6 +31,33 @@ h1 {
 p {
   line-height: 1.5;
   font-size: 20;
+}
+a {
+  text-decoration: none;
+  position: relative;
+}
+
+.link__hover-effect:after {
+  content: "";
+  position: absolute;
+  height: 3px;
+  background-color: black;
+  width: 0;
+  bottom: -3px;
+  right: 0;
+  transition: all 300ms ease;
+}
+
+.link__hover-effect--white:after {
+  background-color: #fff;
+}
+.link__hover-effect--black:after {
+  background-color: #000;
+}
+
+.link__hover-effect:hover:after {
+  width: 100%;
+  left: 0;
 }
 
 li {
@@ -49,6 +80,7 @@ li {
   width: 100%;
   max-width: 800px;
   margin: 0 auto;
+  padding: 0 12px;
 }
 
 .text--purple {
@@ -73,6 +105,7 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 0 12px;
 }
 
 .nav__link--list {
@@ -82,7 +115,6 @@ nav {
 .nav__link--anchor {
   margin: 0 12px;
   color: #242424;
-  text-decoration: none;
   font-weight: 700;
 }
 
@@ -151,7 +183,6 @@ nav {
 
 .about-me__link {
   font-size: 20px;
-  text-decoration: none;
   color: #242424;
   padding: 0 16px;
 }
@@ -195,6 +226,7 @@ nav {
 
 .language__list {
   display: flex;
+  justify-content: center;
   width: 100%;
   flex-wrap: wrap;
 }
@@ -214,6 +246,14 @@ nav {
 }
 
 /* PROJECTS */
+
+.project {
+  margin-bottom: 135px;
+}
+
+.project:last-child {
+  margin-bottom: 40px;
+}
 
 .project__img {
   width: 100%;
@@ -250,6 +290,11 @@ nav {
   filter: blur(5px);
 }
 
+.project:hover .project__description {
+  opacity: 1;
+  transform: translateY(-50%);
+}
+
 .project__list {
   padding-top: 40px;
 }
@@ -258,9 +303,11 @@ nav {
   position: absolute;
   top: 50%;
   left: 90px;
-  transform: translateY(-50%);
+  transform: translateY(100%);
   max-width: 550px;
   z-index: 3;
+  opacity: 0;
+  transition: transform 450ms, opacity 300ms;
 }
 
 .project__description--title {
@@ -271,10 +318,87 @@ nav {
   margin: 16px 0;
 }
 
+.project__description--link {
+  font-size: 20px;
+  margin-right: 16px;
+}
+
 .project__description--title,
 .project__description--sub-title,
 .project__description--para,
 .project__description--link {
   text-align: left;
   color: #fff;
+}
+
+/* FOOTER  */
+
+footer {
+  background-color: #242424;
+}
+
+.footer__social--list {
+  width: 100%;
+  max-width: 500px;
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 28px;
+}
+
+.footer__row {
+  padding: 8% 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer__logo--img {
+  width: 70px;
+  height: 70px;
+}
+
+.footer__social--link,
+.footer__logo--popper {
+  color: #fff;
+}
+
+.footer__logo--popper {
+  position: absolute;
+  right: 0;
+  top: 30px;
+  font-weight: 700;
+  opacity: 0;
+  transition: all 300ms ease;
+}
+
+.footer__anchor {
+  position: relative;
+  margin-bottom: 20px;
+}
+
+.footer__anchor:hover .footer__logo--popper {
+  transform: translateX(60px);
+  opacity: 1;
+}
+
+/* Small phones, tablets, large smartphones */
+
+@media (max-width: 768px) {
+nav {
+  height: 68px;
+}
+
+h1 {
+  font-size: 28px;
+}
+
+.about-me__info--para {
+  font-size: 18px;
+
+}
+
+.language {
+  width: calc(100% / 3);
+}
 }
